Bug 326941 - Plasma crashes when closing a window that has already been closed from taskbar context menu
Summary: Plasma crashes when closing a window that has already been closed from taskba...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: 4.11.8
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 325079 325188 325604 325880 326879 327139 327435 327550 327830 328040 329894 330109 330223 330752 330766 331083 331115 331320 331658 332599 332742 332743 332905 333928 335032 335430 336033 336086 336483 336535 336611 336824 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-31 13:16 UTC by Nikola Kovacs
Modified: 2014-07-01 09:06 UTC (History)
35 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.10
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (10.87 KB, text/plain)
2013-12-16 21:51 UTC, david
Details
New crash information added by DrKonqi (17.37 KB, text/plain)
2014-02-06 09:05 UTC, Thibaut Renaux
Details
New crash information added by DrKonqi (12.57 KB, text/plain)
2014-02-18 09:55 UTC, Simon Andric
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikola Kovacs 2013-10-31 13:16:30 UTC
Application: plasma-desktop (4.11.2)
KDE Platform Version: 4.11.2
Qt Version: 4.8.4
Operating System: Linux 3.11.0-12-generic x86_64
Distribution: Ubuntu 13.10

-- Information about the crash:
- What I was doing when the application crashed:

Right clicked on a task item, clicked close.
Right clicked again, before the window closed. 
In the mean time the window closed, and the task item disappeared
Clicked on close again.

-- Backtrace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8d3f9227c0 (LWP 2554))]

Thread 4 (Thread 0x7f8d20515700 (LWP 2555)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f8d385ce06b in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f8d385ce0a9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f8d32c88f6e in start_thread (arg=0x7f8d20515700) at pthread_create.c:311
#4  0x00007f8d3f21b9cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f8c950bc700 (LWP 2559)):
#0  __libc_enable_asynccancel () at ../nptl/sysdeps/unix/sysv/linux/x86_64/cancellation.S:65
#1  0x00007f8d3f20ef72 in poll () at ../sysdeps/unix/syscall-template.S:81
#2  0x00007f8d3257e694 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8d3257e79c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8d3bde7a76 in QEventDispatcherGlib::processEvents (this=0x7f8c900008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f8d3bdb95ef in QEventLoop::processEvents (this=this@entry=0x7f8c950bbd70, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f8d3bdb98e5 in QEventLoop::exec (this=this@entry=0x7f8c950bbd70, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f8d3bcb888f in QThread::exec (this=this@entry=0x2b11490) at thread/qthread.cpp:542
#8  0x00007f8d3bd9ad13 in QInotifyFileSystemWatcherEngine::run (this=0x2b11490) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00007f8d3bcbaf2f in QThreadPrivate::start (arg=0x2b11490) at thread/qthread_unix.cpp:338
#10 0x00007f8d32c88f6e in start_thread (arg=0x7f8c950bc700) at pthread_create.c:311
#11 0x00007f8d3f21b9cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f8c8f28b700 (LWP 2560)):
#0  0x00007f8d32c8b055 in __GI___pthread_mutex_lock (mutex=0x7f8c88000a60) at pthread_mutex_lock.c:95
#1  0x00007f8d325be391 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8c8f28abb8 in ?? ()
#3  0x00007f8d3257e11c in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8d3257e62b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f8d3257e79c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f8d3bde7a76 in QEventDispatcherGlib::processEvents (this=0x7f8c880008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#7  0x00007f8d3bdb95ef in QEventLoop::processEvents (this=this@entry=0x7f8c8f28ad70, flags=...) at kernel/qeventloop.cpp:149
#8  0x00007f8d3bdb98e5 in QEventLoop::exec (this=this@entry=0x7f8c8f28ad70, flags=...) at kernel/qeventloop.cpp:204
#9  0x00007f8d3bcb888f in QThread::exec (this=this@entry=0x2e657d0) at thread/qthread.cpp:542
#10 0x00007f8d3bd9ad13 in QInotifyFileSystemWatcherEngine::run (this=0x2e657d0) at io/qfilesystemwatcher_inotify.cpp:265
#11 0x00007f8d3bcbaf2f in QThreadPrivate::start (arg=0x2e657d0) at thread/qthread_unix.cpp:338
#12 0x00007f8d32c88f6e in start_thread (arg=0x7f8c8f28b700) at pthread_create.c:311
#13 0x00007f8d3f21b9cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f8d3f9227c0 (LWP 2554)):
[KCrash Handler]
#6  0x00007f8d3bdcc0d8 in QObject::killTimer (this=0x47f9380, id=0) at kernel/qobject.cpp:1602
#7  0x00007f8d3bdd79c1 in QTimer::stop (this=this@entry=0x47f9380) at kernel/qtimer.cpp:266
#8  0x00007f8d3bdd7a4f in QTimer::start (this=0x47f9380) at kernel/qtimer.cpp:216
#9  0x00007f8d3bdd7a88 in QTimer::start (this=<optimized out>, msec=msec@entry=800) at kernel/qtimer.cpp:234
#10 0x00007f8c9f268793 in MouseEventListener::sceneEventFilter (this=0x4f381a0, item=0x4f8da50, event=0x7fff10e9cf70) at ../../../../plasma/declarativeimports/qtextracomponents/mouseeventlistener.cpp:179
#11 0x00007f8d3b722fd5 in QGraphicsScenePrivate::filterDescendantEvent (this=this@entry=0x1168a00, item=item@entry=0x4f8da50, event=event@entry=0x7fff10e9cf70) at graphicsview/qgraphicsscene.cpp:1159
#12 0x00007f8d3b72763e in QGraphicsScenePrivate::sendEvent (this=0x1168a00, item=0x4f8da50, event=0x7fff10e9cf70) at graphicsview/qgraphicsscene.cpp:1211
#13 0x00007f8d3b727b3f in QGraphicsScenePrivate::sendMouseEvent (this=0x1168a00, mouseEvent=0x7fff10e9cf70) at graphicsview/qgraphicsscene.cpp:1295
#14 0x00007f8d3b7333b6 in QGraphicsScenePrivate::mousePressEventHandler (this=this@entry=0x1168a00, mouseEvent=mouseEvent@entry=0x7fff10e9cf70) at graphicsview/qgraphicsscene.cpp:1422
#15 0x00007f8d3b733849 in QGraphicsScene::mousePressEvent (this=<optimized out>, mouseEvent=0x7fff10e9cf70) at graphicsview/qgraphicsscene.cpp:4074
#16 0x00007f8d3b73c6d0 in QGraphicsScene::event (this=0x108dfb0, event=0x7fff10e9cf70) at graphicsview/qgraphicsscene.cpp:3455
#17 0x00007f8d3b157dfc in QApplicationPrivate::notify_helper (this=this@entry=0x10e4f00, receiver=receiver@entry=0x108dfb0, e=e@entry=0x7fff10e9cf70) at kernel/qapplication.cpp:4567
#18 0x00007f8d3b15e470 in QApplication::notify (this=this@entry=0x10dd050, receiver=receiver@entry=0x108dfb0, e=e@entry=0x7fff10e9cf70) at kernel/qapplication.cpp:4353
#19 0x00007f8d3ca7ea6a in KApplication::notify (this=0x10dd050, receiver=0x108dfb0, event=0x7fff10e9cf70) at ../../kdeui/kernel/kapplication.cpp:311
#20 0x00007f8d3bdba8bd in QCoreApplication::notifyInternal (this=0x10dd050, receiver=0x108dfb0, event=event@entry=0x7fff10e9cf70) at kernel/qcoreapplication.cpp:946
#21 0x00007f8d3b156526 in sendSpontaneousEvent (event=event@entry=0x7fff10e9cf70, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#22 qt_sendSpontaneousEvent (receiver=<optimized out>, event=event@entry=0x7fff10e9cf70) at kernel/qapplication.cpp:5565
#23 0x00007f8d3b7530af in QGraphicsView::mousePressEvent (this=0x33e8ba0, event=0x7fff10e9d4e0) at graphicsview/qgraphicsview.cpp:3164
#24 0x00007f8d3b1a7191 in QWidget::event (this=this@entry=0x33e8ba0, event=event@entry=0x7fff10e9d4e0) at kernel/qwidget.cpp:8371
#25 0x00007f8d3b5485be in QFrame::event (this=0x33e8ba0, e=0x7fff10e9d4e0) at widgets/qframe.cpp:557
#26 0x00007f8d3b753e09 in QGraphicsView::viewportEvent (this=0x33e8ba0, event=0x7fff10e9d4e0) at graphicsview/qgraphicsview.cpp:2866
#27 0x00007f8d3bdbaa26 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=this@entry=0x10e4f00, receiver=receiver@entry=0x37e5440, event=event@entry=0x7fff10e9d4e0) at kernel/qcoreapplication.cpp:1056
#28 0x00007f8d3b157ddc in QApplicationPrivate::notify_helper (this=this@entry=0x10e4f00, receiver=receiver@entry=0x37e5440, e=e@entry=0x7fff10e9d4e0) at kernel/qapplication.cpp:4563
#29 0x00007f8d3b15e5ad in QApplication::notify (this=this@entry=0x10dd050, receiver=receiver@entry=0x37e5440, e=e@entry=0x7fff10e9d4e0) at kernel/qapplication.cpp:4110
#30 0x00007f8d3ca7ea6a in KApplication::notify (this=0x10dd050, receiver=0x37e5440, event=0x7fff10e9d4e0) at ../../kdeui/kernel/kapplication.cpp:311
#31 0x00007f8d3bdba8bd in QCoreApplication::notifyInternal (this=0x10dd050, receiver=receiver@entry=0x37e5440, event=event@entry=0x7fff10e9d4e0) at kernel/qcoreapplication.cpp:946
#32 0x00007f8d3b15dd63 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#33 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x37e5440, event=event@entry=0x7fff10e9d4e0, alienWidget=alienWidget@entry=0x37e5440, nativeWidget=nativeWidget@entry=0x33e8ba0, buttonDown=buttonDown@entry=0x7f8d3bc3c2f8 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3178
#34 0x00007f8d3b1d27db in QETWidget::translateMouseEvent (this=this@entry=0x33e8ba0, event=event@entry=0x7fff10e9d860) at kernel/qapplication_x11.cpp:4631
#35 0x00007f8d3b1d2079 in QApplication::x11ProcessEvent (this=0x10dd050, event=event@entry=0x7fff10e9d860) at kernel/qapplication_x11.cpp:3624
#36 0x00007f8d3b1f9922 in x11EventSourceDispatch (s=0x10e9830, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#37 0x00007f8d3257e3a6 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#38 0x00007f8d3257e6f8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#39 0x00007f8d3257e79c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#40 0x00007f8d3bde7a55 in QEventDispatcherGlib::processEvents (this=0x1033ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#41 0x00007f8d3b1f99d6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#42 0x00007f8d3bdb95ef in QEventLoop::processEvents (this=this@entry=0x7fff10e9dc40, flags=...) at kernel/qeventloop.cpp:149
#43 0x00007f8d3bdb98e5 in QEventLoop::exec (this=this@entry=0x7fff10e9dc40, flags=...) at kernel/qeventloop.cpp:204
#44 0x00007f8d3bdbee5b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#45 0x00007f8d3b15634c in QApplication::exec () at kernel/qapplication.cpp:3828
#46 0x00007f8d3f52527c in kdemain (argc=1, argv=0x7fff10e9de98) at ../../../../plasma/desktop/shell/main.cpp:126
#47 0x00007f8d3f142de5 in __libc_start_main (main=0x4006e0 <main(int, char**)>, argc=1, ubp_av=0x7fff10e9de98, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff10e9de88) at libc-start.c:260
#48 0x000000000040070e in _start ()

Possible duplicates by query: bug 325880, bug 325188, bug 281349.

Reported using DrKonqi
Comment 1 Jekyll Wu 2013-11-11 08:05:36 UTC
*** Bug 327435 has been marked as a duplicate of this bug. ***
Comment 2 Jekyll Wu 2013-11-11 08:05:44 UTC
*** Bug 325880 has been marked as a duplicate of this bug. ***
Comment 3 Jekyll Wu 2013-11-11 08:06:06 UTC
*** Bug 325188 has been marked as a duplicate of this bug. ***
Comment 4 Jekyll Wu 2013-11-14 02:43:40 UTC
*** Bug 327550 has been marked as a duplicate of this bug. ***
Comment 5 Jekyll Wu 2013-11-14 02:49:29 UTC
*** Bug 325604 has been marked as a duplicate of this bug. ***
Comment 6 Jekyll Wu 2013-11-20 00:54:26 UTC
*** Bug 327830 has been marked as a duplicate of this bug. ***
Comment 7 david 2013-12-16 21:51:19 UTC
Created attachment 84131 [details]
New crash information added by DrKonqi

plasma-desktop (4.11.2) on KDE Platform 4.11.2 using Qt 4.8.4

- What I was doing when the application crashed:
Copying from Class 10 HDSC around 2 Gb
Digikam white screened completely when PC left aside (probable energy saving)
PC was very hot, chromium flash plugin made PCU 100%
Killed digikam & chromium process

After, resuming digikam's copy via Dolphin, I then tried copying a backup to my ubuntu NFS drive on my LAN.
had to change the rights on NFS to 770
Plasma then puked and popped these messages

- Unusual behavior I noticed:
much slowness and lag even once Digikam was killed,
sudo chmod never returned, though it applied what i'd typed

-- Backtrace (Reduced):
#6  0x00007fef477800d4 in QObject::killTimer (this=0x2dd97c0, id=33078480) at kernel/qobject.cpp:1602
#7  0x00007fef4778b9c1 in QTimer::stop (this=this@entry=0x2dd97c0) at kernel/qtimer.cpp:266
#8  0x00007fef4778ba4f in QTimer::start (this=0x2dd97c0) at kernel/qtimer.cpp:216
#9  0x00007fef4778ba88 in QTimer::start (this=<optimized out>, msec=msec@entry=800) at kernel/qtimer.cpp:234
#10 0x00007feeab07b793 in MouseEventListener::sceneEventFilter (this=0x47f24d0, item=0x3ff7e00, event=0x7fff94066020) at ../../../../plasma/declarativeimports/qtextracomponents/mouseeventlistener.cpp:179
Comment 8 Jekyll Wu 2014-01-13 02:28:08 UTC
*** Bug 329894 has been marked as a duplicate of this bug. ***
Comment 9 Jekyll Wu 2014-01-18 05:37:35 UTC
*** Bug 330109 has been marked as a duplicate of this bug. ***
Comment 10 Jekyll Wu 2014-02-04 21:31:51 UTC
*** Bug 330766 has been marked as a duplicate of this bug. ***
Comment 11 Jekyll Wu 2014-02-05 03:41:00 UTC
*** Bug 330223 has been marked as a duplicate of this bug. ***
Comment 12 Jekyll Wu 2014-02-05 03:41:02 UTC
*** Bug 330752 has been marked as a duplicate of this bug. ***
Comment 13 Thibaut Renaux 2014-02-06 09:05:45 UTC
Created attachment 85020 [details]
New crash information added by DrKonqi

plasma-desktop (4.11.3) on KDE Platform 4.11.3 using Qt 4.8.6

- What I was doing when the application crashed:
I tried to close an application by right clicking on it in the taskbar.

-- Backtrace (Reduced):
#6  QGraphicsScenePrivate::filterDescendantEvent (this=this@entry=0xe4d720, item=item@entry=0x2b9f750, event=event@entry=0x7fff449c9e00) at graphicsview/qgraphicsscene.cpp:1161
#7  0x00007f604e034f2e in QGraphicsScenePrivate::sendEvent (this=0xe4d720, item=0x2b9f750, event=0x7fff449c9e00) at graphicsview/qgraphicsscene.cpp:1211
#8  0x00007f604e03542f in QGraphicsScenePrivate::sendMouseEvent (this=0xe4d720, mouseEvent=0x7fff449c9e00) at graphicsview/qgraphicsscene.cpp:1295
#9  0x00007f604e040ca6 in QGraphicsScenePrivate::mousePressEventHandler (this=this@entry=0xe4d720, mouseEvent=mouseEvent@entry=0x7fff449c9e00) at graphicsview/qgraphicsscene.cpp:1422
#10 0x00007f604e041139 in QGraphicsScene::mousePressEvent (this=<optimized out>, mouseEvent=0x7fff449c9e00) at graphicsview/qgraphicsscene.cpp:4074
Comment 14 Jekyll Wu 2014-02-13 08:54:39 UTC
*** Bug 331083 has been marked as a duplicate of this bug. ***
Comment 15 Christoph Feck 2014-02-13 23:06:35 UTC
*** Bug 331115 has been marked as a duplicate of this bug. ***
Comment 16 Simon Andric 2014-02-18 09:55:26 UTC
Created attachment 85213 [details]
New crash information added by DrKonqi

plasma-desktop (4.11.6) on KDE Platform 4.12.2 using Qt 4.8.6

- What I was doing when the application crashed:

tried to close firefox-trunk which was hanged... it had around 40 tabs open...after it didnt want to close i went in task maanger and tried to kill it and then this dr. konqi appeared and plasma restarted...

nice day

Simon

-- Backtrace (Reduced):
#6  QTimer::start (this=0x690077005f002d, msec=msec@entry=800) at kernel/qtimer.cpp:233
#7  0x00007f5ea5f367a3 in MouseEventListener::sceneEventFilter (this=0x6dd4ca0, item=0x25fcbf0, event=0x7fffe0a120f0) at ../../../../plasma/declarativeimports/qtextracomponents/mouseeventlistener.cpp:184
#8  0x00007f5f54c02aa5 in QGraphicsScenePrivate::filterDescendantEvent (this=this@entry=0xbd6cb0, item=item@entry=0x25fcbf0, event=event@entry=0x7fffe0a120f0) at graphicsview/qgraphicsscene.cpp:1159
#9  0x00007f5f54c070ee in QGraphicsScenePrivate::sendEvent (this=0xbd6cb0, item=0x25fcbf0, event=0x7fffe0a120f0) at graphicsview/qgraphicsscene.cpp:1211
#10 0x00007f5f54c075ef in QGraphicsScenePrivate::sendMouseEvent (this=0xbd6cb0, mouseEvent=0x7fffe0a120f0) at graphicsview/qgraphicsscene.cpp:1295
Comment 17 Jekyll Wu 2014-03-10 09:05:33 UTC
*** Bug 331658 has been marked as a duplicate of this bug. ***
Comment 18 Jekyll Wu 2014-03-10 09:17:52 UTC
*** Bug 331320 has been marked as a duplicate of this bug. ***
Comment 19 Jekyll Wu 2014-03-31 07:07:36 UTC
*** Bug 332599 has been marked as a duplicate of this bug. ***
Comment 20 Jekyll Wu 2014-04-06 07:49:19 UTC
*** Bug 332742 has been marked as a duplicate of this bug. ***
Comment 21 Jekyll Wu 2014-04-06 07:49:30 UTC
*** Bug 332743 has been marked as a duplicate of this bug. ***
Comment 22 Christoph Feck 2014-04-20 13:08:24 UTC
Eike, when the taskbar item is removed, the context menu stays open. This is probably also the reason for bug 326879, which has a different backtrace, but same steps to reproduce.

I could reproduce it using Yast package manager, which needs some time to react actually closing the window when initializing. During this time, you can again invoke the context menu, wait for Yast to close, taskbar item gets removed, but menu stays open.
Comment 23 Eike Hein 2014-04-20 13:14:14 UTC
Thanks Christoph, that's a good pointer. I'll look into it after the holiday weekend.
Comment 24 Christoph Feck 2014-04-27 00:55:57 UTC
*** Bug 333928 has been marked as a duplicate of this bug. ***
Comment 25 Eike Hein 2014-04-28 08:12:56 UTC
Git commit 6a3e000bfa16cb4f3371dd7bc7005659194d5c5b by Eike Hein.
Committed on 28/04/2014 at 08:12.
Pushed by hein into branch 'KDE/4.11'.

Fix crash after dismissing the context menu of a just-disappeared task.

M  +6    -0    plasma/desktop/applets/tasks/package/contents/ui/main.qml
M  +13   -1    plasma/desktop/applets/tasks/tasks.cpp
M  +2    -1    plasma/desktop/applets/tasks/tasks.h

http://commits.kde.org/kde-workspace/6a3e000bfa16cb4f3371dd7bc7005659194d5c5b
Comment 26 Eike Hein 2014-05-16 13:46:51 UTC
*** Bug 326879 has been marked as a duplicate of this bug. ***
Comment 27 Christoph Feck 2014-05-27 20:34:22 UTC
*** Bug 335430 has been marked as a duplicate of this bug. ***
Comment 28 Christoph Feck 2014-06-11 21:23:40 UTC
*** Bug 336086 has been marked as a duplicate of this bug. ***
Comment 29 Christoph Feck 2014-06-20 08:18:23 UTC
*** Bug 332905 has been marked as a duplicate of this bug. ***
Comment 30 Christoph Feck 2014-06-20 08:18:36 UTC
*** Bug 336483 has been marked as a duplicate of this bug. ***
Comment 31 Christoph Feck 2014-06-20 08:21:09 UTC
*** Bug 336033 has been marked as a duplicate of this bug. ***
Comment 32 Christoph Feck 2014-06-20 08:26:14 UTC
*** Bug 335032 has been marked as a duplicate of this bug. ***
Comment 33 Christoph Feck 2014-06-20 08:27:34 UTC
*** Bug 328040 has been marked as a duplicate of this bug. ***
Comment 34 Christoph Feck 2014-06-20 08:30:03 UTC
*** Bug 327139 has been marked as a duplicate of this bug. ***
Comment 35 Christoph Feck 2014-06-20 08:32:40 UTC
*** Bug 325079 has been marked as a duplicate of this bug. ***
Comment 36 Christoph Feck 2014-06-21 11:49:48 UTC
*** Bug 336535 has been marked as a duplicate of this bug. ***
Comment 37 Christoph Feck 2014-06-23 19:44:08 UTC
*** Bug 336611 has been marked as a duplicate of this bug. ***
Comment 38 Christoph Feck 2014-06-28 09:56:14 UTC
*** Bug 336824 has been marked as a duplicate of this bug. ***