Fix crash after dismissing the context menu of a just-disappeared task.

BUG:326941